# uikitxv2

./: .gitignore  ARCHITECTURE_DEPENDENCIES.md  CURSORRULES.md  Doxyfile  Doxyfile_for_siddhartha  MIGRATION_VALIDATION_REPORT.md  MULTI_SYMBOL_IMPLEMENTATION_SUMMARY.md  PYTHON_ENVIRONMENT_FIX_SUMMARY.md  PricingMonkey_SOD_Output.csv  README.md  Starting  actant.csv  actant_eod_data.db  add_greek_logging.py  agents.md  architecture_dependency_diagram.html  architecture_diagram_v2.html  bbgsymbolstotranslate.md  check_daily_positions.py  check_greek_data.py  check_option_positions.py  check_option_prices.py  check_trades_db.py  cme_products_market_7.json  count_callbacks.py  create_test_tables.py  cursor_1_implementing_variable_level_d.md  decorators_overview.md  diag_output.txt  diagnose_observatory.py  diagnose_watcher_imports.py  direct_test.py  fix_anaconda_path.ps1  greek_logging_instructions.md  inspect_test_db.py  inspect_tyu5_output.py  live_vs_test_comparison.md  main_diff.txt  market_movement_data.csv  my_algos_response.json  (+100 more)
ActantEOD/: GE_XCME.ZN_20250521_102611.json  GE_XCME.ZN_20250521_102611_processed.csv  GE_XCME.ZN_20250526_140333_processed.csv  GE_XCME.ZN_20250528_123816.csv  actant_eod_data.db  dashboard_eod.py  data_service.py  file_manager.py  pricing_monkey_processor.py  pricing_monkey_retrieval.py  process_actant_json.py  verify_th_pnl.py
ActantSOD/: MODIFICATIONS.md  actant.py  browser_automation.py
NEW/: csv_parser.py  dashboard_final_refinements.md  dashboard_path_fix.md  data_formatter.py  final_css_and_table_fixes.md  final_dashboard_test.py  formula_documentation.md  formula_mappings.json  phase3_implementation.md  pnl_dashboard.py  run_demo.py  test_dashboard.py  test_dashboard_fix.py  test_excel_read.py  verify_data_integration.py
PNLMODULEFORINTEGRATION/: __init__.py
Reviewandimplement/: computederivates.py
SumoMachine/: InstallDependencies.bat  OpenOutputFolder.bat  PmToExcel.py  README.md  RunPmToExcel.bat  RunPmToExcel_Fast.bat  __init__.py  requirements.txt
TTRestAPI/: README.md  __init__.py  api_example.py  get_token_cli.py  markets_response.json  token_manager.py  tt-token  tt_config.py  tt_token.json  tt_token_sim.json  tt_token_uat.json  zn_instruments_product_16143309052651006928.json
_backup_old_structure/: BACKUP_MANIFEST.md
_backup_transition_20250531/: TRANSITION_COMPLETE.md  backup_state.md
_backup_transition_20250531_192926/: FINAL_MIGRATION_REPORT.md  PRE_TRANSITION_STATE.md  TRANSITION_SUMMARY.md
actant_spot_risk_3pm_chunks/: bav_analysis_20250806_135928_chunk_01_of_16.csv  bav_analysis_20250806_135928_chunk_02_of_16.csv  bav_analysis_20250806_135928_chunk_03_of_16.csv  bav_analysis_20250806_135928_chunk_04_of_16.csv  bav_analysis_20250806_135928_chunk_05_of_16.csv  bav_analysis_20250806_135928_chunk_06_of_16.csv  bav_analysis_20250806_135928_chunk_07_of_16.csv  bav_analysis_20250806_135928_chunk_08_of_16.csv  bav_analysis_20250806_135928_chunk_09_of_16.csv  bav_analysis_20250806_135928_chunk_10_of_16.csv  bav_analysis_20250806_135928_chunk_11_of_16.csv  bav_analysis_20250806_135928_chunk_12_of_16.csv  bav_analysis_20250806_135928_chunk_13_of_16.csv  bav_analysis_20250806_135928_chunk_14_of_16.csv  bav_analysis_20250806_135928_chunk_15_of_16.csv  bav_analysis_20250806_135928_chunk_16_of_16.csv  bav_analysis_20250807_135954_chunk_01_of_16.csv  bav_analysis_20250807_135954_chunk_02_of_16.csv  bav_analysis_20250807_135954_chunk_03_of_16.csv  bav_analysis_20250807_135954_chunk_04_of_16.csv  bav_analysis_20250807_135954_chunk_05_of_16.csv  bav_analysis_20250807_135954_chunk_06_of_16.csv  bav_analysis_20250807_135954_chunk_07_of_16.csv  bav_analysis_20250807_135954_chunk_08_of_16.csv  bav_analysis_20250807_135954_chunk_09_of_16.csv  bav_analysis_20250807_135954_chunk_10_of_16.csv  bav_analysis_20250807_135954_chunk_11_of_16.csv  bav_analysis_20250807_135954_chunk_12_of_16.csv  bav_analysis_20250807_135954_chunk_13_of_16.csv  bav_analysis_20250807_135954_chunk_14_of_16.csv  bav_analysis_20250807_135954_chunk_15_of_16.csv  bav_analysis_20250807_135954_chunk_16_of_16.csv  bav_analysis_20250808_135951_chunk_01_of_16.csv  bav_analysis_20250808_135951_chunk_02_of_16.csv  bav_analysis_20250808_135951_chunk_03_of_16.csv  bav_analysis_20250808_135951_chunk_04_of_16.csv  (+12 more)
apps/: __init__.py
(+95780 files in other folders)
